// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders correctly 1`] = `
<div>
  <button
    class="sc-beySPh eJPZdB medium"
    stile="default"
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`Button renders on error 1`] = `
<div>
  <button
    class="sc-beySPh eJPZdB medium"
    error="true"
    stile="default"
    type="button"
  >
    Button
    <div
      data-testid="body-element"
    />
  </button>
</div>
`;

exports[`Button renders with stile 1`] = `
<div>
  <button
    class="sc-beySPh eKvydP medium"
    stile="mute"
    type="button"
  >
    Button
    <div
      data-testid="body-element"
    />
  </button>
</div>
`;

exports[`Button renders with stile 2`] = `
<div>
  <button
    class="sc-beySPh eJPZdB medium"
    stile="default"
    type="button"
  >
    Button
    <div
      data-testid="body-element"
    />
  </button>
</div>
`;

exports[`Button renders with stile 3`] = `
<div>
  <button
    class="sc-beySPh lkJifs medium"
    stile="primary"
    type="button"
  >
    Button
    <div
      data-testid="body-element"
    />
  </button>
</div>
`;

exports[`Button renders with title 1`] = `
<div>
  <button
    class="sc-beySPh eJPZdB medium"
    stile="default"
    type="button"
  >
    Button
    <div
      data-testid="body-element"
    />
  </button>
</div>
`;

exports[`Button should render click handler 1`] = `
<div>
  <button
    class="sc-beySPh eJPZdB medium"
    stile="default"
    type="button"
  >
    Button
    <div
      data-testid="body-element"
    />
  </button>
</div>
`;

exports[`Button should renders on disabled 1`] = `
<div>
  <button
    class="sc-beySPh eKvydP medium"
    disabled=""
    stile="mute"
    type="button"
  >
    Button
    <div
      data-testid="body-element"
    />
  </button>
</div>
`;

exports[`Button should renders on disabled 2`] = `
<div>
  <button
    class="sc-beySPh eJPZdB medium"
    disabled=""
    stile="default"
    type="button"
  >
    Button
    <div
      data-testid="body-element"
    />
  </button>
</div>
`;

exports[`Button should renders on disabled 3`] = `
<div>
  <button
    class="sc-beySPh lkJifs medium"
    disabled=""
    stile="primary"
    type="button"
  >
    Button
    <div
      data-testid="body-element"
    />
  </button>
</div>
`;

exports[`Button should renders with body 1`] = `
<div>
  <button
    class="sc-beySPh eJPZdB medium"
    stile="default"
    type="button"
  >
    Button
    <div
      data-testid="body-element"
    />
  </button>
</div>
`;
